--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ diferentes tamanhos de tela) e apresentar um design agradável e intuitivo
     <link rel="icon" href="image/logo.png">
     <title>Minecraft: Home</title>
     <!-- Importando arquivos CSS -->
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="Css/Index.css">
     <link rel="stylesheet" href="Css/Global.css">
 </head>
 
