--- a/More.html
+++ b/More.html
@@ -14,7 +14,7 @@
     <!-- Cabeçalho da página -->
     <header>
         <a class="return2" href="index.html"><img class="return" src="image/Arrow.png" alt="Seta de retorno"></a>
-        <a class="titulo">MAIS INFORMAÇÕES</a>
+        <a class="titulo">INFO</a>
     </header>
 
     <!-- Conteúdo principal -->
